--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,27 @@
-samples/*/*.xcodeproj/*
-samples/*/Build
-!samples/*/*.xcodeproj/project.pbxproj
-!samples/*/*.xcworkspace/contents.xcworkspacedata
-
 # for vim
 *~
 *.swp
 
-# for mac
+# OS X
 .DS_Store
+
+# Xcode
+build/
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata
+*.xccheckout
+profile
+*.moved-aside
+DerivedData
+*.hmap
+*.ipa
+
+# Bundler
+.bundle
