--- a/samples/BlinkLed/BlinkLed/BlinkLed-Info.plist
+++ b/samples/BlinkLed/BlinkLed/BlinkLed-Info.plist
@@ -13,7 +13,7 @@
 	<key>CFBundleIcons~ipad</key>
 	<dict/>
 	<key>CFBundleIdentifier</key>
-	<string>com.uxux.monaka.test.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.ux-xu.konashi.$(PRODUCT_NAME:rfc1034identifier)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
